# predacore

./: .coverage.MacBookPro.Dlink.98757.XsTGxlFx  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements-lock.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-wheels.yml  ci.yml  docker-sandbox.yml.disabled  publish-python.yml
agents/default/: HEARTBEAT.md  IDENTITY.md  JOURNAL.md  MEMORY.md  REFLECTION.md  SOUL.md  TOOLS.md  USER.md
benchmarks/: PAPER_PLAN.md  README.md
demo/: scenario_1.py
deploy/: docker-compose.yml
deploy/grafana/: jarvis-dashboard.json
deploy/kubernetes/: alertmanager-config.yaml  alerts.yaml  api_gateway.yaml  daf_self_optimization.yaml  deployment.yaml  hpa.yaml  ingress.yaml  monitoring.yaml
docker/sandbox/: Dockerfile
docs/: AUTONOMY.md  CHANNEL_ADAPTER.md  DEVELOPMENT_GUIDE.md  IDENTITY.md  MCP.md  MEMORY.md  MULTI_AGENT.md  SAFETY.md  TOOLS.md  architecture_diagram.md  communication_protocols.md  development_context.md  launch_profiles.md  operations.md
docs/architecture/sequence_diagrams/: api_gateway_flow.md
docs/deployment/: local_kubernetes_setup.md
docs/evaluation/: README.md
docs/observability/: LOG_SCHEMA.md  README.md
docs/observability/grafana/: prometheus_dashboard.json
docs/prompts/: document-src.md
docs/swagger/: daf_self_optimization_api.yaml
docs/testing/: test_coverage.md
scripts/: __init__.py  daily_standup.sh  dev_up.py  eval_harness.py  nightly_eval.sh  prometheus_cli.py  start_sprint.sh  tui_chat.py
src/: prometheus_chat.py
src/jarvis/: __init__.py  cli.py  config.py  core.py  errors.py  gateway.py  prompts.py  sessions.py
src/jarvis/agents/: autonomy.py  collaboration.py  daf_bridge.py  engine.py  meta_cognition.py  self_improvement.py
src/jarvis/auth/: middleware.py  sandbox.py  security.py
src/jarvis/channels/: __init__.py  discord.py  telegram.py  webchat.py  whatsapp.py
src/jarvis/documents/: 00_SHIP_PLAN.md  01_core.md  02_infrastructure.md  03_execution.md  04_vendor.md
src/jarvis/evals/: ale_bench.py  codex_proxy.py  load_test.py  longmemeval.py  swe_bench.py
src/jarvis/identity/: BOOTSTRAP.md  EVENT_HORIZON.md  SOUL_SEED.md  __init__.py  (+4 more)
src/jarvis_core_crate/: Cargo.toml  pyproject.toml
src/jarvis_core_crate/python/jarvis_core/: __init__.py
src/jarvis_core_crate/src/: bm25.rs  embedding.rs  entity.rs  lib.rs  relations.rs  vector.rs
src/predacore/: __init__.py  bootstrap.py  bootstrap_prefetch.py  cli.py  config.py  core.py  errors.py  gateway.py  prompts.py  sessions.py
src/predacore_core_crate/: Cargo.toml  pyproject.toml
src/predacore_core_crate/python/predacore_core/: __init__.py
src/predacore_core_crate/src/: bm25.rs  embedding.rs  entity.rs  fuzzy.rs  hnsw_index.rs  lib.rs  omniparser.rs  relations.rs  synonyms.rs  vector.rs
tests/: __init__.py  test_collective_intelligence.py  test_dispatcher.py  test_enhancements.py  test_enums.py  test_gemini_cli_flow.py  test_handlers.py  test_health.py  test_hivemind.py  test_integration_smoke.py  test_middleware.py  test_pipeline.py  test_resilience.py  test_retry.py
tests/api_gateway/: test_api_gateway.py  test_authentication.py  test_circuit_breaker.py  test_end_to_end.py  test_rate_limiting.py  test_rest_surface.py
tests/channels/: test_channel_health.py
tests/common/: test_errors.py  test_logging_config.py  test_memory_service.py  test_metrics.py  test_ollama_client.py  test_schemas.py
tests/core_strategic_engine/: __init__.py  test_csc_integration.py  test_llm_planner.py  test_planner.py
tests/daf/: test_task_store.py
tests/dynamic_agent_fabric/: __init__.py  test_agent_registry.py  test_daf_service.py  test_self_optimization.py  test_service.py  test_wil_contract.py
tests/ethical_governance_module/: __init__.py  test_audit_logger.py  test_rule_engine.py
tests/integration/: test_end_to_end_edge_cases.py  test_end_to_end_workflow.py
tests/jarvis/: __init__.py  hallucination_eval_harness.py  test_autonomy_runtime.py  test_codex_proxy.py  test_desktop_operator.py  test_e2e_smoke.py  test_flame_lifecycle.py  test_git_integration.py  test_hallucination_eval_harness.py  test_jarvis_core.py  test_llm_router_prompt.py  test_marketplace_and_ume_tools.py  test_memory_retriever.py  test_meta_cognition.py  test_outcome_store.py  test_parallel_tools.py  test_phase2_features.py  test_phase3_production.py  test_phase4_differentiation.py  test_sandbox_wiring.py  test_security.py  test_self_improvement.py  test_smart_input.py  test_text_tool_adapter.py  test_todays_fixes.py  test_world_model.py
tests/knowledge_nexus/: __init__.py  test_service_backend.py  test_storage.py
tests/operators/: __init__.py  test_android_u2_backend.py  test_browser_bridge.py  test_operators.py
tests/predacore/: __init__.py  conftest.py  hallucination_cases.json  hallucination_eval_harness.py  test_autonomy_runtime.py  test_codex_proxy.py  test_desktop_operator.py  test_e2e_smoke.py  test_flame_lifecycle.py  test_git_integration.py  test_hallucination_eval_harness.py  test_infrastructure_smoke.py  test_llm_router_prompt.py  test_marketplace_and_ume_tools.py  test_memory_consolidator.py  test_memory_e2e.py  test_memory_handlers.py  test_memory_healer.py  test_memory_llm_loop.py  test_memory_methods.py  test_memory_retriever.py  test_memory_subsystem.py  test_memory_unit.py  test_memory_verify.py  test_meta_cognition.py  test_outcome_store.py  test_parallel_tools.py  test_phase2_features.py  test_phase3_production.py  test_phase4_differentiation.py  test_predacore_core.py  test_sandbox_wiring.py  test_security.py  test_self_improvement.py  test_smart_input.py  test_text_tool_adapter.py  test_todays_fixes.py
tests/tools/: test_dispatcher.py  test_enums.py  test_handlers.py  test_pipeline.py  test_resilience.py
tests/user_modeling_engine/: test_service.py
tests/world_interaction_layer/: __init__.py  test_approvals.py  test_mcp_server.py  test_sandbox.py  test_wil_service.py
(+452 files in other folders)
