[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jarvis_core"
version = "0.1.0"
description = "Rust-powered intelligence layer for JARVIS"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "jarvis_core._core"
python-source = "python"
