[package]
name = "predacore_core"
version = "0.1.2"
edition = "2021"
description = "Rust-powered intelligence layer for PredaCore — embeddings, vector search, BM25, fuzzy matching, entity extraction, graph traversal"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rayon = "1"
once_cell = "1"

# Candle for ML inference (GTE-small embeddings)
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokenizers = "0.22"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
