[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "predacore_core"
version = "1.1.1"
description = "Rust-powered intelligence layer for PredaCore"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "predacore_core._core"
python-source = "python"
